--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!-- saved from url=(0067)https://www.17sucai.com/preview/1474877/2018-11-30/happy/index.html -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-<title>Happy Valentine's!</title>
+<title>小可爱</title>
 
 
 
@@ -17,7 +17,7 @@
 
 <canvas id="canvas" width="1306" height="907"></canvas>
 
-<div class="title">Happy Valentine's Day!</div>
+<div class="title">今晚早点睡觉，明天起床还要继续喜欢你</div>
 
 <script src="./FastBlur.js"></script>
 <script src="./jquery.min(1).js"></script>
