--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <canvas id="canvas" width="1306" height="907"></canvas>
 
-<div class="title">这个季节吹来的风，这个年纪笑起来的你，一样的依恋</div>
+<div class="title">这个季节吹来的风，这个年纪笑起来的你，一样依恋不舍</div>
 
 <script src="./FastBlur.js"></script>
 <script src="./jquery.min(1).js"></script>
