--- a/index.html
+++ b/index.html
@@ -1,32 +1,20 @@
 <!DOCTYPE html>
 <!-- saved from url=(0067)https://www.17sucai.com/preview/1474877/2018-11-30/happy/index.html -->
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
-<title>小可爱</title>
-
-
-
-<link rel="stylesheet" href="./style.css">
-
-
+<html lang="en">
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <title>小可爱</title>
+    <link rel="stylesheet" type="text/css" href="./css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
-
-<link href="./css" rel="stylesheet" type="text/css">
-
 <canvas id="canvas" width="1306" height="907"></canvas>
-
-<div class="title">这个季节吹过来的风，这个年纪笑起来的你，同样令人陶醉</div>
+<div class="title">只要看到你的笑，世界就没有那么糟</div>
+</body>
 
 <script src="./FastBlur.js"></script>
 <script src="./jquery.min(1).js"></script>
 <script src="./index.js"></script>
 
-
-
-
-
-
-
-</body></html>
+</html>
