--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 <canvas id="canvas" width="1306" height="907"></canvas>
-<div class="title">只要看到你的笑，世界就没有那么糟</div>
+<div class="title">生活很讨厌，还好你够可爱。</div>
 </body>
 
 <script src="./FastBlur.js"></script>
