--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
 </head>
 
 <body>
-<canvas id="canvas" width="1306" height="907"></canvas>
-<div class="title">生活有一点点苦，而你有一点点甜。</div>
+
+<div class="page">
+    <div class="title">生活有一点点苦，而你有一点点甜。</div>
+    <canvas id="canvas" width="1306" height="907"></canvas>
+</div>
+
 </body>
 
 <script src="./FastBlur.js"></script>
