--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
 
 <div class="page">
-    <div class="title">生活有一点点苦，而你有一点点甜。</div>
     <canvas id="canvas" width="1306" height="907"></canvas>
+    <div class="title">生活有一点点苦，<br> 而你有一点点甜。</div>
 </div>
 
 </body>
